--- a/EcomerceMVC/Views/Shared/_LayoutCustomer.cshtml
+++ b/EcomerceMVC/Views/Shared/_LayoutCustomer.cshtml
@@ -29,6 +29,9 @@
 
     <!-- Template Stylesheet -->
     <link href="~/css/style.css" rel="stylesheet">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
     @RenderSection("Styles", required: false)
 </head>
 <body>
@@ -111,7 +114,7 @@
         </div>
         <!-- Modal Search End -->
 
-        <div style="min-height:400px;">
+        <div style="min-height:400px; margin-top: 150px; padding: 20px;">
             @RenderBody()
         </div>
 
@@ -129,7 +132,7 @@
     <script src="~/lib/waypoints/waypoints.min.js"></script>
     <script src="~/lib/lightbox/js/lightbox.min.js"></script>
     <script src="~/lib/owlcarousel/owl.carousel.min.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <!-- Template Javascript -->
     <script src="~/js/main.js"></script>
     @RenderSection("Scripts", required: false)
