--- a/EcomerceMVC/Views/Shared/_LayoutCustomer.cshtml
+++ b/EcomerceMVC/Views/Shared/_LayoutCustomer.cshtml
@@ -81,13 +81,30 @@
                         </div>
                         <div class="d-flex m-3 me-0">
                             <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
-                            <a href="#" class="position-relative me-4 my-auto">
-                                <i class="fa fa-shopping-bag fa-2x"></i>
-                                <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
-                            </a>
-                            <a href="#" class="my-auto">
-                                <i class="fas fa-user fa-2x"></i>
-                            </a>
+                            @await Component.InvokeAsync("CartIcon")
+                           
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <div class="d-flex align-items-center">
+                                    @{
+                                        var fullName = User.Identity.Name;
+                                        var nameParts = fullName?.Split(' ');
+                                        var displayName = nameParts != null && nameParts.Length >= 2
+                                        ? $"{nameParts[0]} {nameParts[1]}"
+                                        : fullName;
+                                    }
+                                    <span class="me-2">Hello, @displayName!</span>
+
+                                    <form asp-controller="Account" asp-action="Logout" method="post" style="display:inline;">
+                                        <button type="submit" class="btn btn-outline-danger">Logout</button>
+                                    </form>
+                                </div>
+                            }
+                            else
+                            {
+                                <a asp-controller="Account" asp-action="Login" class="btn btn-outline-primary"><i class="fas fa-user fa-2x"></i></a>
+                            }
+
                         </div>
                     </div>
                 </nav>
