--- a/EcomerceMVC/Views/Shared/_LayoutCustomer.cshtml
+++ b/EcomerceMVC/Views/Shared/_LayoutCustomer.cshtml
@@ -83,7 +83,7 @@
                             <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
                             @await Component.InvokeAsync("CartIcon")
                            
-                            @if (User.Identity.IsAuthenticated)
+                            @if (User.Identity.IsAuthenticated && User.FindFirst("UserId")?.Value !=null)
                             {
                                 <div class="d-flex align-items-center">
                                     @{
